  . Fixed bug #71596 (Segmentation fault on ZTS with date function
    (setlocale)). (Anatol)
  . Fixed bug #71535 (Integer overflow in zend_mm_alloc_heap()). (Dmitry)
  . Fixed bug #71470 (Leaked 1 hashtable iterators). (Nikita)
  . Fixed bug #71575 (ISO C does not allow extra ‘;’ outside of a function).
    (asgrim)
  . Fixed bug #71724 (yield from does not count EOLs). (Nikita)

- Curl:
  . Fixed bug #71694 (Support constant CURLM_ADDED_ALREADY). (mpyw)

- Date:
  . Fixed bug #71635 (DatePeriod::getEndDate segfault). (Thomas Punt)

- libxml:
  . Fixed bug #71536 (Access Violation crashes php-cgi.exe). (Anatol)

- ODBC:
  . Fixed bug #47803, #69526 (Executing prepared statements is succesfull only
    for the first two statements). (einavitamar at gmail dot com, Anatol)

- PCRE:
  . Fixed bug #71659 (segmentation fault in pcre running twig tests).
    (nish dot aravamudan at canonical dot com)

- PDO_DBlib:
  . Bug #54648 (PDO::MSSQL forces format of datetime fields).
    (steven dot lambeth at gmx dot de, Anatol)

- Phar:
  . Fixed bug #71625 (Crash in php7.dll with bad phar filename).
    (Anatol)
  . Fixed bug #71317 (PharData fails to open specific file). (Jos Elstgeest)

- phpdbg:
  . Fixed crash when advancing (except step) inside an internal function. (Bob)

- Session:
  . Fixed bug #71754 (Regression in PHP7.0: trivial script segfaults php-cgi).
    (Laruence)

- SPL:
  . Fixed bug #71617 (private properties lost when unserializing ArrayObject).
    (Nikita)

- Standard:
  . Fixed bug #71660 (array_column behaves incorrectly after foreach by
    reference). (Laruence)

- Zip:
  . Update bundled libzip to 1.1.2. (Remi, Anatol)

03 Mar 2016 PHP 7.0.4

- Core:
  . Fixed bug (Low probability segfault in zend_arena). (Laruence)
  . Fixed bug #71441 (Typehinted Generator with return in try/finally crashes).
    (Bob)
  . Fixed bug #71442 (forward_static_call crash). (Laruence)
  . Fixed bug #71443 (Segfault using built-in webserver with intl using